force-app/main/default/objects/Call_Log__c/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <label>Call Duration (Minutes)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>