force-app/main/default/objects/Call_Log__c/fields/Call_Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Link__c</fullName>
    <label>Call Recording Link</label>
    <type>Url</type>
</CustomField>