force-app/main/default/objects/Call_Log__c/fields/Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Time__c</fullName>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>