force-app/main/default/objects/Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Call_Start_Time__c</columns>
    <columns>Call_End_Time__c</columns>
    <columns>Call_Outcome__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>Call_Recording_Link__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>